--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,34 @@
     <string name="booklists_name">Book Lists</string>
     <string name="booklistdetails_route">booklists/{id}</string>
     <string name="booklistdetails_name">Book List Details</string>
-    <string name="confirm_text">confirm</string>
-    <string name="deny_text">deny</string>
+    <string name="confirmdialog_button_confirm">confirm</string>
+    <string name="confirmdialog_button_deny">deny</string>
+    <string name="confirmdialog_button_cancel">cancel</string>
+    <string name="alertdialog_button_ok">Ok</string>
+    <string name="dialog_icon">Dialog icon</string>
+    <string name="delete_icon">delete icon</string>
+    <string name="textfield_clear_icon">clear icon</string>
+    <string name="back_button">back button</string>
+    <string name="menu_button">menu button</string>
+    <string name="bookdetails_addtolist_dialog_title">Choose list</string>
+    <string name="bookdetails_addtolist_success_title">Success</string>
+    <string name="bookdetails_addtolist_error_title">Error</string>
+    <string name="bookdetails_caption_title">Title</string>
+    <string name="bookdetails_caption_ratings">Ratings</string>
+    <string name="bookdetails_add_icon">add icon</string>
+    <string name="bookdetails_add_buttontext">Add to list</string>
+    <string name="booklistdetails_caption_listname">List name</string>
+    <string name="booklistdetails_delete_icon">Delete item</string>
+    <string name="confirmdialog_confirm_title">Confirm</string>
+    <string name="booklist_renamemodal_confirm_title">Rename list</string>
+    <string name="booklist_renamemodal_button_rename">Rename</string>
+    <string name="booklist_createmodal_confirm_title">Create list</string>
+    <string name="booklist_createmodal_button_create">Create</string>
+    <string name="booklist_createlist_icon">Create list icon</string>
+    <string name="booklist_button_createlist">Create list</string>
+    <string name="home_button_loadmore">Load more</string>
+    <string name="home_button_search">Search</string>
+    <string name="home_error_nobooks">No books found</string>
+    <string name="dropdown_item_rename">Rename</string>
+    <string name="dropdown_item_delete">Delete</string>
 </resources>
